--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /Csharp_Basic/.vs/Csharp_Basic
 /Csharp_Basic/homeWork_basic/obj
+/Csharp_Basic/.vs/ProjectEvaluation
+/Csharp_Basic/homeWork_basic/bin/Debug/net6.0
