--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Csharp_Basic/homeWork_basic/obj
 /Csharp_Basic/.vs/ProjectEvaluation
 /Csharp_Basic/homeWork_basic/bin/Debug/net6.0
+/.vs/Csharp_Basic/v17
